# EduRV32ISimulator

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: cmake.yml
riscvLib/: CMakeLists.txt  MemoryMappedIO.h  RISCVCpu.cpp  RISCVCpu.h  RISCVTimer.cpp  RISCVTimer.h  SerialPort.cpp  SerialPort.h  SingleElfMemory.cpp  SingleElfMemory.h  csr.h  instructions.h  register.h  riscvMemory.cpp  riscvMemory.h
riscvTest/: CMakeLists.txt  CMakeLists.txt.in  RiscCpuBaseTest.h  main_test.cpp  test_alu.cpp  test_basics.cpp  test_branch.cpp  test_csregister.cpp  test_integration.cpp  test_interruptIntegraion.cpp  test_interrupts.cpp  test_jump.cpp  test_load.cpp  test_riscvTimer.cpp  test_store.cpp  test_utype.cpp
riscvTest/riscv-elf/: CMakeLists.txt  Makefile  crt0.s  readme.md  riscv-emu.ld  trap.s
riscvTest/riscv-elf/driver/: HardwareTimer.h  SerialPortDriver.c  SerialPortDriver.h  ecall.h  ecall.s  interrupts.h  interrupts.s
riscvTest/riscv-elf/os/: ring_ready_list.c  ring_ready_list.h  rvos.c  rvos.h  rvos.s  rvos_types.h
riscvTest/riscv-elf/test/: add.c  add_double.c  basic.c  env_call.c  gcc_mul.c  mul.c  os_test.c  serial.c  sqare_mul.c  sw_trap.c  timer_intr.c
